helms/graphana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  annotations:
    cert-manager.io/issuer: gitlab-issuer
    kubernetes.io/ingress.class: nginx
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: monitoring.95-163-250-30.sslip.io # вот здесь записываете <EXTERNAL-IP> в формате через дефис
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 80
        path: / 
        pathType: Prefix
